--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,65 +1,91 @@
 @charset "UTF-8";
 
-* { padding: 0; margin: 0; }
+* {
+   padding: 0;
+   margin: 0;
+}
 
 html, body {
-  height: 100%;
-  background: #ffffff;
+   height: 100%;
+   background: #ffffff;
 }
 
-.text-center{
+.text-center {
    height: 700px;
+   font-family: 'Noto Sans';
 }
-.input-form-box{
-   justify-content: center;
-   font-weight: bold;
-}
-span{
-   width:300px;   
+
+
+span {
+   width: 300px;
 }
 
 #container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
 }
 
 #loginBox {
-  width: 300px;
-  text-align: center;
-  background-color: #ffffff;
+   width: 400px;
+   text-align: center;
+   background-color: #ffffff;
 }
+
 .input-form-box {
-  border: 0px solid #ff0000;
-  display: flex;
-  margin-bottom: 5px;
+   display: flex;
+   flex-direction:column;
+   font-weight:bolder;
+   justify-content:center;
+   margin-bottom: 30px;
+   margin-top: 10px;
+   width: 200px;
 }
-.input-form-box > span {
-  display: block;
-  text-align: left;
-  padding-top: 5px;
-  min-width: 65px;
+
+.input-form-box>span {
+   display: block;
+   text-align: left;
+   padding-top: 5px;
+   font-size: 15px;
 }
+
 .button-login-box {
-  margin: 10px 0;
+   margin: 10px 0;
 }
-#loginBoxTitle {
-  color:#000000;
-  font-weight: bold;
-  font-size: 32px;
-  text-transform: uppercase;
-  padding: 5px;
-  margin-bottom: 20px;
-  background: linear-gradient(to right, #270a09, #8ca6ce);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+
+#loginBoxTitle h1{
+   color: black;
+   font-weight: 900;
+   font-size: 32px;
+   text-transform: uppercase;
+   padding: 5px;
+   margin-bottom: 30px;
 }
+
 #inputBox {
-  margin: 10px;
+   margin: 10px;
 }
 
 #inputBox button {
-  padding: 3px 5px;
+   padding: 3px 5px;
+}
+
+.form-control {
+   border: none;
+   border-bottom: 1px solid #ddd;
+   width: 390px;
+}
+
+.btn-primary{
+   background-color: #ddd;   
+   border: 1px solid #ddd;
+   height: 50px;
+   border-radius: 15px;
+   width: 395px;
+}
+
+.btn-primary:hover{
+   background-color: black;   
+   border: 1px solid #ddd;
 }
